# LambertWCopula

./: .gitignore  CHANGELOG.md  CITATION.cff  LICENSE  README.md  pyproject.toml  requirements  requirements.txt  run_analysis.py  test_package.py
archive/: copula.py  correlations.py  density.py  derivatives.py  empirical_copula.py  import_data.py  main.py  pseudo_observations.py  psi.py  scatter_plot.py  summary_statistics.py
data/: Temp_Precipitation.csv
examples/: README.md  example_01_basic_analysis.py  example_02_bootstrap.py  example_03_cross_validation.py  example_04_model_comparison.py  example_05_simulation.py
lambertwcopula/: __init__.py  analysis.py  bootstrap.py  closed_form.py  cmef.py  comparison.py  constants.py  context.py  copula.py  cross_validation.py  density.py  dependence.py  dependence_diagnostics.py  derivatives.py  diagnostic_plots.py  empirical.py  evaluation.py  figure_manager.py  goodness_of_fit.py  html_report.py  import_data.py  inference.py  interpretation.py  likelihood_profile.py  mle.py  moments.py  pipeline.py  preprocessing.py  psi.py  report.py  report_builder.py  residuals.py  results.py  run_analysis.py  simulation.py  theoretical.py  visualization.py  visualization_residuals.py
lambertwcopula/benchmark/: __init__.py  compare.py  gaussian.py
reports/: report.html  results.csv  results.json  results.txt
results/: CorrelationMatrix.xlsx  EmpiricalCopula.csv  EmpiricalCopulaSurface.csv  PseudoObservations.xlsx  SummaryStatistics.xlsx
